fix: remove vertical scrollbar from twitter cards

--- a/themes/hugo-theme-ephemeralenvironments/static/css/base.css
+++ b/themes/hugo-theme-ephemeralenvironments/static/css/base.css
@@ -1027,7 +1027,7 @@ a.muted:active {
 #twtr-scroll {
   width: 100%;
   height: 100%;
-  overflow: scroll;
+  overflow-x: scroll;
   scrollbar-width: thin;
   -webkit-overflow-scrolling: touch;
 }
